DeployGoWebApplication/K8s/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: gowebapp
  labels:
    app: gowebapp
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: gowebapp
  type: ClusterIP
