DeployGoWebApplication/K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gowebapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: gowebapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: golangwebapp
                port:
                  number: 8080
